--- a/stylesheets/all.scss
+++ b/stylesheets/all.scss
@@ -62,7 +62,7 @@ $screen-sm-min: 576px;
   justify-content: space-between;
   align-items: flex-end;
   button {
-    margin-bottom: auto;
+    margin-bottom: 0.5rem;
   }
 }
 
